feat:pre-loading for nested data fetcher