@@ -4,15 +4,17 @@ package com.seanxiaao.springbootwithgraphql.service.impl;
 import com.seanxiaao.springbootwithgraphql.entity.InternalShow;
 import com.seanxiaao.springbootwithgraphql.entity.Show;
 import com.seanxiaao.springbootwithgraphql.service.ShowService;
-import com.sun.tools.javac.util.List;
 import org.springframework.stereotype.Service;
+
+import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class ShowServiceImpl implements ShowService {
 
     @Override
     public List<Show> shows() {
-        return List.of(
+        return Arrays.asList(
                 new Show("Stranger Things", 2016),
                 new Show("Ozark", 2017),
                 new Show("The Crown", 2016),
